# WT32-SqLn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  secrets.h  webserver.py
3Dprint/BatteryCase/: body.stl  lid.stl
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
main/: CMakeLists.txt  lv_conf.h  main.cpp  main.hpp
main/devices/: conf_WT32SCO1-Plus.h
main/helpers/: helper_display.hpp  helper_ota.hpp  helper_ui.hpp  ui_callbacks.hpp
main/ui/: ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
partitions/: partition-8MB-NoFactory.csv
